--- a/Git/style.css
+++ b/Git/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Arial';
+    font-family: 'Courier';
     text-align: center;
     color: blue;
     background-color: gray;
