--- a/Git/style.css
+++ b/Git/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Courier';
     text-align: center;
-    color: blue;
+    color: red;
     background-color: gray;
     border: 5px solid #000000;
 }
